// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories generator should generate folder path 1`] = `
"import { Meta, StoryObj, moduleMetadata } from '@storybook/angular';
import { NestedComponent } from './nested.component';
const meta: Meta<NestedComponent> = {
  component: NestedComponent,
  id: 'nestedcomponent-nested',
  title: 'Components/To/Nested',
  decorators: [moduleMetadata({ imports: [NestedComponent] })],
};
export default meta;
type Story = StoryObj<NestedComponent>;
export const Nested: Story = {
  args: {},
};
"
`;

exports[`stories generator should generate folder path 2`] = `
"import { E2eVariations } from '@skyux-sdk/e2e-schematics';

describe('test', () => {
  E2eVariations.forEachTheme((theme) => {
    describe(\`in \${theme} theme\`, () => {
      beforeEach(() =>
        cy.visit(
          \`/iframe.html?globals=theme:\${theme}&id=nestedcomponent-nested--nested\`,
        ),
      );

      it('should render the component', () => {
        cy.get('app-nested')
          .should('exist')
          .should('be.visible')
          .screenshot(\`nestedcomponent-nested--nested-\${theme}\`)
          .percySnapshot(\`nestedcomponent-nested--nested-\${theme}\`, {
            widths: E2eVariations.DISPLAY_WIDTHS,
          });
      });
    });
  });
});
"
`;

exports[`stories generator should run successfully 1`] = `
"import { Meta, StoryObj, moduleMetadata } from '@storybook/angular';
import { NxWelcomeComponent } from './nx-welcome.component';
const meta: Meta<NxWelcomeComponent> = {
  component: NxWelcomeComponent,
  id: 'nxwelcomecomponent-nxwelcome',
  title: 'Components/Nx Welcome',
  decorators: [moduleMetadata({ imports: [NxWelcomeComponent] })],
};
export default meta;
type Story = StoryObj<NxWelcomeComponent>;
export const NxWelcome: Story = {
  args: {},
};
"
`;

exports[`stories generator should use -storybook project 1`] = `
"import { Meta, StoryObj, moduleMetadata } from '@storybook/angular';
import { NxWelcomeComponent } from './nx-welcome.component';
const meta: Meta<NxWelcomeComponent> = {
  component: NxWelcomeComponent,
  id: 'nxwelcomecomponent-nxwelcome',
  title: 'Components/Nx Welcome',
  decorators: [moduleMetadata({ imports: [NxWelcomeComponent] })],
};
export default meta;
type Story = StoryObj<NxWelcomeComponent>;
export const NxWelcome: Story = {
  args: {},
};
"
`;

exports[`stories generator should use -storybook project 2`] = `
"import { E2eVariations } from '@skyux-sdk/e2e-schematics';

describe('test-storybook', () => {
  E2eVariations.forEachTheme((theme) => {
    describe(\`in \${theme} theme\`, () => {
      beforeEach(() =>
        cy.visit(
          \`/iframe.html?globals=theme:\${theme}&id=nxwelcomecomponent-nxwelcome--nx-welcome\`,
        ),
      );

      it('should render the component', () => {
        cy.get('app-nx-welcome')
          .should('exist')
          .should('be.visible')
          .screenshot(\`nxwelcomecomponent-nxwelcome--nx-welcome-\${theme}\`)
          .percySnapshot(\`nxwelcomecomponent-nxwelcome--nx-welcome-\${theme}\`, {
            widths: E2eVariations.DISPLAY_WIDTHS,
          });
      });
    });
  });
});
"
`;
